[metadata]
description-file = "README.md"

[build-system]
# virtualenv 20.0.34 partly breaks pre-commit under conda
# https://github.com/ContinuumIO/anaconda-issues/issues/12094
# Poetry uses pip and setuptools (although they're not included as dependencies)
# We don't need to list wheel here, but setting a min vr can avoid generating inferior wheels
requires = ["poetry>=1.1,<2", "virtualenv==20.0.33", "wheel>=0.36,<1.0"]
build-backend = "poetry.masonry.api"


#########################################################################################
# Poetry metadata
#########################################################################################

[tool.poetry]
name = "typeddfs"
version = "0.10.0"
description = "Pandas DataFrame subclasses that enforce structure and can self-organize."
authors = ["Douglas Myers-Turnbull"]
maintainers = ["dmyersturnbull"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["pandas", "typing", "columns", "structured"]
homepage = "https://github.com/dmyersturnbull/typed-dfs"
repository = "https://github.com/dmyersturnbull/typed-dfs"
documentation = "https://typed-dfs.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
	"Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = []

[tool.poetry.urls]
CI = "https://github.com/dmyersturnbull/typed-dfs/actions"
Issues = "https://github.com/dmyersturnbull/typed-dfs/issues"
Download = "https://pypi.org/project/typeddfs/"


#########################################################################################
# Tyrannosaurus
#########################################################################################

[tool.tyrannosaurus.options]
align    = true
sort     = true

[tool.tyrannosaurus.sources]
status             = "'Development'"
date               = "'${today}'"
copyright          = "'Copyright 2016–2021'"
version            = "tool.poetry.version"
release            = "tool.poetry.version"
pyversions         = "tool.poetry.dependencies"
devdeps            = "tool.poetry.dev-dependencies"
linelength         = "tool.black.line-length"
authors = [
    "Douglas Myers-Turnbull <github:dmyersturnbull,orcid:0000-0003-3610-4808>"
]
maintainers = "tool.tyrannosaurus.sources.authors"

[tool.tyrannosaurus.targets]
pyproject    = true
init         = true
tox          = true
docs         = true
license      = true
authors      = true
github       = true
readme       = true
changelog    = true


#########################################################################################
# Poetry build & dependencies
#########################################################################################

[tool.poetry.dependencies]
python                   = "^3.8"
# natsort has major version bumps often
natsort                  = ">=7"
pandas                   = "^1.2"
tabulate                 = "^0.8"
# we don't care about the exact versions, as long as tabulate and pandas accept them
wcwidth                  = ">=0.2"
pyarrow                  = {version=">=4", optional=true}
#fastparquet              = {version="^0.6", optional=true}
#tables                   = {version=">=3", optional=true}
lxml                     = {version=">=4", optional=true}
odfpy                    = {version=">=1", optional=true}
openpyxl                 = {version=">=3", optional=true}
xlrd                     = {version=">=2", optional=true}
pyxlsb                   = {version=">=1", optional=true}
html5lib                 = {version=">=1", optional=true}
beautifulsoup4           = {version=">=4", optional=true}


[tool.poetry.dev-dependencies]
black                    = "==21.7b0"
pre-commit               = "^2.13"
pre-commit-hooks         = "^4.0"
bandit                   = "^1.7"
pytest                   = ">=6.2"
coverage                 = {extras = ["toml"], version = "^5.5"}
pytest-cov               = "^2.11"
flake8                   = "^3.9"
flake8-docstrings        = "^1.5"
flake8-bugbear           = ">=21"
Sphinx                   = "^4.0"
sphinx-copybutton        = ">=0.4, <1.0"
sphinx-autoapi           = "^1.5"
sphinx-rtd-theme         = ">=0.5, <1.0"
tomlkit                  = ">=0.7, <1.0"


[tool.poetry.extras]
feather = ["pyarrow"]
parquet = ["pyarrow"]  # fastparquet will also work
xml = ["lxml"]
excel = ["openpyxl", "defusedxml"]
xlsb = ["pyxlsb"]
#hdf5    = ["tables"]
html = ["html5lib", "beautifulsoup4"]
all = ["pyarrow", "lxml", "openpyxl", "defusedxml", "pyxlsb", "html5lib", "beautifulsoup4"]


#########################################################################################
# Testing
#########################################################################################

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


#########################################################################################
# Style checking
#########################################################################################

[tool.coverage.paths]
source = ["typeddfs"]

[tool.coverage.run]
source = ["typeddfs"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 100
target-version = ["py38", "py39"]

[mypy]
check_untyped_defs = true
strict_optional = true
